# multicam_recording_toolkit

./: .hgignore  CMakeCache.txt  CMakeLists.txt
cmake/Modules/: FindGStreamer.cmake
include/ros_gst_record_interface/: ros_gst_interface.h  video_recorder.h
src/: test_c_interface.c
src/ros_gst_record_interface/: ros_gst_interface.c  video_recorder.cc
tests/: CMakeLists.txt
tests/include/ros_gst_record_interface/: ros_gst_interface.h
tests/scripts/: frame_reate_test.sh  record_video.sh
tests/src/: piping_test.cc  piping_video_test.cc  video_play.c
